--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -93,11 +93,31 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <!--<li class="nav-item active">
-                    <a class="nav-link disabled " href="/shipment_main">
-                        "출하관리 화면"
+                <li class="nav-item active">
+                    <a class="nav-link" href="/shipment_main">
+                        "Test 화면"
                     </a>
-                </li>-->
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/business_goal">
+                        "Business goal 화면"
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/sales_performance">
+                        Sales performance 화면"
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/partners_list">
+                        Partners list 화면"
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/receiving_inspection">
+                        Receiving inspection 화면"
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="col-10 col-offset-2">
