--- a/FlaskServer/templates/plan_list.html
+++ b/FlaskServer/templates/plan_list.html
@@ -1,46 +1,46 @@
 {% extends 'base.html' %}
 {% block title %} 생산계획입력 {% endblock %}
 {% block body %}
- <div class="container-fluid">
-  <div class="col-10 col-offset-2">
-   <h1 class="page-header">생산 계획 등록</h1>
-   <hr/>
-  </div>
-  <form class="form-inline" action="/excel_table" method="POST" enctype=multipart/form-data>
-   <div class="row container-fluid">
-    <input id="excel-upload" type="file" name="file" accept="xlsx/*" class="col-4" >
-    <button type="submit" class="btn btn-warning col-1">업로드</button>
+<div class="container-fluid text-white bg-secondary">
+    <div class="col-10 col-offset-2">
+        <h1 class="page-header">생산 계획 등록</h1>
+        <hr/>
+    </div>
+    <form class="form-inline" action="/excel_table" method="POST" enctype=multipart/form-data>
+        <div class="row container-fluid">
+            <input id="excel-upload" type="file" name="file" accept="xlsx/*" class="col-4">
+            <button type="submit" class="btn btn-warning col-1">업로드</button>
+            <hr/>
+        </div>
+    </form>
     <hr/>
-   </div>
-  </form>
-  <hr/>
-  <div class="table-responsive">
+</div>
+<div class="table-responsive">
     {% if rows[0] %}
     <table class="table table-striped table-bordered">
-     <thead class="thead-dark">
-      <tr>
-       <th>월</th>
-       <th>주차</th>
-       <th>모델코드</th>
-       <th>모델명</th>
-       <th>수량</th>
-      </tr>
-     </thead>
-     <tbody>
-      {% for row in rows %}
-      <tr>
-       <th> {{ row[0] }}</th>
-       <th> {{ row[1] }}</th>
-       <th> {{ row[2] }}</th>
-       <th> {{ row[3] }}</th>
-       <th> {{ row[4] }}</th>
-      </tr>
-      {% endfor %}
-     </tbody>
+        <thead class="thead-dark">
+        <tr>
+            <th>월</th>
+            <th>주차</th>
+            <th>모델코드</th>
+            <th>모델명</th>
+            <th>수량</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for row in rows %}
+        <tr>
+            <th> {{ row[0] }}</th>
+            <th> {{ row[1] }}</th>
+            <th> {{ row[2] }}</th>
+            <th> {{ row[3] }}</th>
+            <th> {{ row[4] }}</th>
+        </tr>
+        {% endfor %}
+        </tbody>
     </table>
     {% else %}
     <h3>No Notice in the Database</h3>
     {% endif %}
-   </div>
- </div>
+</div>
 {% endblock %}
