--- a/FlaskServer/templates/shipment_main.html
+++ b/FlaskServer/templates/shipment_main.html
@@ -1,8 +1,12 @@
 {% extends 'main_base.html' %}
-{% block head %}{% endblock %}
+{% block head %}
+<script>
+
+</script>
+{% endblock %}
 {% block title %} 출하관리 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}출하관리 화면{% endblock %}
+{% block main_title %}Test 화면{% endblock %}
 {% block body %}
 <form class="form-inline" action="/search" method="POST">
     <div class="row container-fluid">
@@ -16,63 +20,6 @@
 <div class="row container-fluid">
     <button type="button" class="btn btn-primary col-1" onclick="location.href='/shipment_main'">전체</button>
     <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal">계약정보 등록</button>
-    <!-- The Modal -->
-    <div class="modal fade" id="insert_modal">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <form class="form-inline" action="/insert_information" method="POST" enctype=multipart/form-data>
-                <div class="modal-content">
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h1 class="page-header">계약정보 등록</h1>
-                    </div>
-                    <!-- Modal Body -->
-                    <div class="modal-body">
-                        <div class="table-responsive">
-                            {% if rows[0] %}
-                            <table class="table table-striped table-bordered">
-                                <thead class="thead-dark">
-                                <tr>
-                                    <th>모델</th>
-                                    <th>시리얼넘버</th>
-                                    <th>출고일</th>
-                                    <th>계약번호</th>
-                                    <th>금액</th>
-                                    <th>납품일</th>
-                                    <th>예상수납일</th>
-                                    <th>실제수납일</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for row in rows %}
-                                <tr>
-                                    <th><input type="checkbox" name="check_box" value="{{ row['_id'] }}"/>{{ row["_model"] }}</th>
-                                    <th>{{ row["_sn"] }}</th>
-                                    <th>{{ row["_shipment_date"] }}</th>
-                                    <th><input type="text" name="contractNum"/></th>
-                                    <th><input type="text" name="sum"/></th>
-                                    <th><input type="date" name="deliveryDate" value='{{now_edate}}'/></th>
-                                    <th><input type="date" name="expectPayDate" value='{{now_edate}}'/></th>
-                                    <th><input type="date" name="realPayDate" value='{{now_edate}}'/></th>
-                                </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                            {% else %}
-                            <h3> No Notice in the Database</h3>
-                            <input type="hidden" name="data_empty" value='{{ true }}'/>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <!-- Modal Footer -->
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-warning">확 인
-                        </button>
-                    </div>
-
-                </div>
-            </form>
-        </div>
-    </div>
 </div>
 <hr/>
 <div class="table-responsive">
@@ -95,16 +42,16 @@
         <tbody>
         {% for row in rows %}
         <tr>
-            <th> {{ row["_model"] }}</th>
-            <th> {{ row["_sn"] }}</th>
-            <th> {{ row["_product_week"] }}</th>
-            <th> {{ row["_outDate"] }}</th>
-            <th> {{ row["_shipment"] }}</th>
-            <th> {{ row["_contractNum"] }}</th>
-            <th> {{ row["_sum"] }}</th>
-            <th> {{ row["_deliveryDate"] }}</th>
-            <th> {{ row["_expectPayDate"] }}</th>
-            <th> {{ row["_realPayDate"] }}</th>
+            <td> {{ row["_model"] }}</td>
+            <td> {{ row["_sn"] }}</td>
+            <td> {{ row["_product_week"] }}</td>
+            <td> {{ row["_outDate"] }}</td>
+            <td> {{ row["_shipment"] }}</td>
+            <td> {{ row["_contractNum"] }}</td>
+            <td> {{ row["_sum"] }}</td>
+            <td> {{ row["_deliveryDate"] }}</td>
+            <td> {{ row["_expectPayDate"] }}</td>
+            <td> {{ row["_realPayDate"] }}</td>
         </tr>
         {% endfor %}
         </tbody>
@@ -113,5 +60,63 @@
     <h3> No Notice in the Database</h3>
     {% endif %}
 </div>
+<!-- The Modal -->
+<div class="modal fade" id="insert_modal">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+        <form class="form-inline" action="/insert_information" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h1 class="page-header">계약정보 등록</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        {% if rows[0] %}
+                        <table class="table table-striped table-bordered">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>모델</th>
+                                <th>시리얼넘버</th>
+                                <th>출고일</th>
+                                <th>계약번호</th>
+                                <th>금액</th>
+                                <th>납품일</th>
+                                <th>예상수납일</th>
+                                <th>실제수납일</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for row in rows %}
+                            <tr>
+                                <th><input type="checkbox" name="check_box" value="{{ row['_id'] }}"/>{{ row["_model"]
+                                    }}
+                                </th>
+                                <th>{{ row["_sn"] }}</th>
+                                <th>{{ row["_shipment_date"] }}</th>
+                                <th><input type="text" name="contractNum"/></th>
+                                <th><input type="text" name="sum"/></th>
+                                <th><input type="date" name="deliveryDate" value='{{now_edate}}'/></th>
+                                <th><input type="date" name="expectPayDate" value='{{now_edate}}'/></th>
+                                <th><input type="date" name="realPayDate" value='{{now_edate}}'/></th>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <h3> No Notice in the Database</h3>
+                        <input type="hidden" name="data_empty" value='{{ true }}'/>
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-warning">확 인
+                    </button>
+                </div>
 
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
