--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -22,95 +22,129 @@
         return string;
     }
 
-    function main_table() {
-        var model_row = $('#model_list').val();
-        var history_row = $('#history_list').val();
-        var product_info_row = $('#info_list').val();
-        var specific_date_row = $('#specific_date_list').val();
-        console.log(model_row);
-        console.log(product_info_row);
-        console.log(specific_date_row);
-        if (model_row == undefined || product_info_row == undefined) {
-            console.log("Rows Empty");
+    function model_filter() {
+        var table_rows = $('#main_table_list').val();
+        console.log(table_rows);
+        if (table_rows == undefined) {
+            console.log('Table length is empty');
         } else {
-            model_row = JSON_parse_convertor(model_row);
-            history_row = JSON_parse_convertor(history_row);
-            product_info_row = JSON_parse_convertor(product_info_row);
+            table_rows = JSON_parse_convertor(table_rows);
+            var model_list = new Array();
+            for (var i = 0; i < table_rows.length; i++) {
+                model_list[i] = table_rows[i]['model'];
+            }
+            console.log(model_list);
+            /*
+            var uniq = model_list.slice().sort(function (a, b) {   // 복사본 만듬
+                return a - b;
+            })
+                .reduce(function (a, b) {
+                    if (a.slice(-1)[0] != b) a.push(b);  // slice(-1)[0]을 통해 마지막 아이템 가져온다
+                    return a;
+                }, []); // a가 시작될 때를 위한 비어있는 배열
+            */
+            $('#model_filter option').each(function () {
+                $('#model_filter').append(
+                    $('<option>').append(model_list)
+                )
+            });
 
-            if (specific_date_row.length != 0) {
-                console.log("Specific date search");
-                specific_date_row = JSON_parse_convertor(specific_date_row);
-                for (var i = 0; i < specific_date_row[0].length; i++) {
-                    $('#main_table').append(
-                        $('<tr>').append(
-                            //$('<td><input type="checkbox" name="main_checkbox"/>').append(specific_date_row[1][i]['model']),
-                            $('<td>').append(specific_date_row[1][i]['model']),
-                            $('<td>').append(specific_date_row[1][i]['sn']),
-                            $('<td>').append(specific_date_row[0][i]['week']),
-                            $('<td>').append(specific_date_row[2][i]['location_history'][specific_date_row[2][i]['location_history'].length - 1]['location']),
-                            $('<td>').append(specific_date_row[2][i]['state_history'][specific_date_row[2][i]['state_history'].length - 1]['state']),
-                            $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>')
-                        )
-                    );
-                    document.getElementsByName("detail_btn")[i].value = specific_date_row[0][i]['model_id'];
-                }
-            } else if (model_row.length != product_info_row.length) {
-                alert("DB Length is wrong !");
-            } else {
-                for (var i = 0; i < model_row.length; i++) {
-                    $('#main_table').append(
-                        $('<tr>').append(
-                            //$('<td><input type="checkbox" name="main_checkbox"/>').append(model_row[i]['model']),
-                            $('<td>').append(model_row[i]['model']),
-                            $('<td>').append(product_info_row[i]['sn']),
-                            $('<td>').append(product_info_row[i]['week']),
-                            $('<td>').append(history_row[i]['location']),
-                            $('<td>').append(history_row[i]['state']),
-                            $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>')
-                        )
-                    );
-                    document.getElementsByName("detail_btn")[i].value = product_info_row[i]['model_id'];
-                }
+        }
+    }
+
+    function location_filter() {
+        $('#location_filter').append(
+            $('<option>').append(1),
+            $('<option>').append(2),
+            $('<option>').append(3)
+        );
+
+    }
+
+    function state_filter() {
+        $('#state_filter').append(
+            $('<option>').append(1),
+            $('<option>').append(2),
+            $('<option>').append(3)
+        );
+
+    }
+
+    function main_table() {
+        var specific_date_row = $('#specific_date_list').val();
+        console.log("Date serch? : " + specific_date_row);
+        var table_rows = $('#main_table_list').val();
+        console.log(table_rows);
+        if (specific_date_row != undefined && specific_date_row != 'None') {
+            console.log("Specific date search");
+            specific_date_row = JSON_parse_convertor(specific_date_row);
+            for (var i = 0; i < specific_date_row[0].length; i++) {
+                $('#main_table').append(
+                    $('<tr>').append(
+                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(specific_date_row[1][i]['model']),
+                        //$('<td>').append(specific_date_row[2][i]['location_history'][specific_date_row[2][i]['location_history'].length - 1]['location']),
+                        $('<td>').append(specific_date_row[1][i]['model']),
+                        $('<td>').append(specific_date_row[0][i]['sn']),
+                        $('<td>').append(specific_date_row[0][i]['week']),
+                        $('<td>').append(specific_date_row[2][i]['location']),
+                        $('<td>').append(specific_date_row[2][i]['state']),
+                        $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>')
+                    )
+                );
+                document.getElementsByName("detail_btn")[i].value = specific_date_row[2][i]['product_info_id'];
+            }
+        } else if (table_rows == undefined) {
+            console.log('Table length is empty');
+        } else {
+            table_rows = JSON_parse_convertor(table_rows);
+            for (var i = 0; i < table_rows.length; i++) {
+                $('#main_table').append(
+                    $('<tr>').append(
+                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(model_row[i]['model']),
+                        $('<td>').append(table_rows[i]['model']),
+                        $('<td>').append(table_rows[i]['sn']),
+                        $('<td>').append(table_rows[i]['week']),
+                        $('<td>').append(table_rows[i]['location']),
+                        $('<td>').append(table_rows[i]['state']),
+                        $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>')
+                    )
+                );
+                document.getElementsByName("detail_btn")[i].value = table_rows[i]['product_info_id'];
             }
         }
     }
 
     function state_change_table() {
-        var model_list = $('#model_list').val();
-        var history_row = $('#history_list').val();
-        var product_info_row = $('#info_list').val();
-        if (model_list == undefined || product_info_row == undefined) {
-            console.log("Rows Empty");
+        var table_rows = $('#main_table_list').val();
+        console.log(table_rows);
+        if (table_rows == undefined) {
+            console.log("main_table_list is Empty");
         } else {
-            model_list = JSON_parse_convertor(model_list);
-            history_row = JSON_parse_convertor(history_row);
-            product_info_row = JSON_parse_convertor(product_info_row);
-            if (model_list.length != product_info_row.length) {
-                alert("DB Length is wrong !");
-            }
-            for (var i = 0; i < model_list.length; i++) {
+            table_rows = JSON_parse_convertor(table_rows);
+            for (var i = 0; i < table_rows.length; i++) {
                 $('#state_table').append(
                     $('<tr>').append(
-                        $('<td><input class="checkbox" type="checkbox" name="check_box" value=""/>').append(model_list[i]['model']),
+                        $('<td><input class="checkbox" type="checkbox" name="check_box" value=""/>').append(table_rows[i]['model']),
                         $('<input type="hidden" name="id" value="">'),
-                        $('<td>').append(product_info_row[i]['sn']),
+                        $('<td>').append(table_rows[i]['sn']),
                         $('<td><input type="text" class="form-control" name="location" value="" >'),
-                        $('<td><select class="form-control" name="states" id="state" value="">' +
-                            '<option>재고</option>' +
+                        $('<td><select class="form-control" name="reason" id="reason" value="">' +
+                            '<option>신규생산</option>' +
                             '<option>판매</option>' +
                             '<option>기증</option>' +
                             '<option>내수용</option>' +
-                            '<option>A/S 입고</option>' +
+                            '<option>A/S</option>' +
                             '<option>불량</option>' +
-                            '<option>폐기</option>' +
+                            '<option>반납</option>' +
+                            '<option>이동</option>' +
                             '</select>')
                     )
                 );
                 //$("#state option:eq(i)").attr("selected", "selected");
-                document.getElementsByName("id")[i].value = product_info_row[i]['_id'];
-                document.getElementsByName("check_box")[i].value = product_info_row[i]['_id'];
-                document.getElementsByName("location")[i].value = history_row[i]['location'];
-                document.getElementsByName("states")[i].value = history_row[i]['state'];
+                document.getElementsByName("check_box")[i].value = table_rows[i]['product_info_id'];
+                document.getElementsByName("id")[i].value = table_rows[i]['product_info_id'];
+                document.getElementsByName("location")[i].value = table_rows[i]['location'];
+                document.getElementsByName("reason")[i].value = table_rows[i]['reason'];
             }
         }
     }
@@ -119,7 +153,7 @@
     function insert_table() {
         $('#insert_table').append(
             $('<tr>').append(
-                $('<td><select class="from-control" id="insert_model" name="model">' +
+                $('<td><select class="form-control" id="insert_model" name="model">' +
                     '<option>Indy3</option>\n' +
                     '<option>Indy5</option>\n' +
                     '<option>Indy7</option>\n' +
@@ -142,22 +176,36 @@
 
             var product_row = $('#model_list').val();
             var product_info_row = $('#info_list').val();
+            var history_row = $('#history_list').val();
             var received_id = $(this).val();
-            var _date, _location, _state, _week;
+            var _date = new Array();
+            var _location = new Array();
+            var _state = new Array();
+            var _week = new Array();
+            var _reason = new Array();
             product_row = JSON_parse_convertor(product_row);
             product_info_row = JSON_parse_convertor(product_info_row);
-            var _model, _sn, _header;
-            for (var j = 0; j < product_info_row.length; j++) {
-                if (received_id == product_info_row[j]['product_id']) {
-                    _date = product_info_row[j]['updated_date'];
-                    _location = product_info_row[j]['location'];
-                    _state = product_info_row[j]['state'];
-                    _week = product_info_row[j]['week'];
+            history_row = JSON_parse_convertor(history_row);
+            var _model, _sn, _header, _model_id;
+            for (var j = 0; j < history_row.length; j++) {
+                if (received_id == history_row[j]['product_id']) {
+                    _date.push(history_row[j]['date']);
+                    _location.push(history_row[j]['location']);
+                    _state.push(history_row[j]['state']);
+                    _reason.push(history_row[j]['reason']);
                 }
-                if (received_id == product_row[j]['_id']) {
-                    _model = product_row[j]['model'];
-                    _sn = product_row[j]['sn'];
-                    _header = product_row[j]['header'];
+            }
+            for (var k = 0; k < product_info_row.length; k++) {
+                if (received_id == product_info_row[k]['_id']) {
+                    _model_id = product_info_row[k]['model_id'];
+                    _sn = product_info_row[k]['sn'];
+                    _week = product_info_row[k]['week'];
+                    _header = product_info_row[k]['header'];
+                    for (var p = 0; p < product_row.length; p++) {
+                        if (_model_id == product_row[p]['_id']) {
+                            _model = product_row[p]['model'];
+                        }
+                    }
                 }
             }
             //console.log(_date);
@@ -179,14 +227,15 @@
                     $('<tr>').append(
                         $('<td>').append(_date[i]),
                         $('<td>').append(_location[i]),
-                        $('<td>').append(_state[i]))
+                        $('<td>').append(_state[i]),
+                        $('<td>').append(_reason[i]))
                 );
             }
         });
     }
 
     function btn_click_event() {
-        $("#selectBtn").click(function () {
+        $("#state_filter").click(function () {
             alert('hi');
             var rowData = new Array();
             var tdArr = new Array();
@@ -227,7 +276,30 @@
         state_change_table();
         detail_tabler();
         insert_table();
+        model_filter();
+        location_filter();
+        state_filter();
+        $('#state_submit_btn').click(function () {
+            if ($('#state').val().length == 0) {
+                alert("빈 칸을 입력하세요");
+                $('#state').focus();
+                return false;
+            }
+        });
+        $('#insert_submit_btn').click(function () {
+            if ($('#insert_sn').val().length == 0) {
+                alert("빈 칸을 입력하세요");
+                $('#insert_sn').focus();
+                return false;
+            }
+            if ($('#insert_header').val().length == 0) {
+                alert("빈 칸을 입력하세요");
+                $('#insert_header').focus();
+                return false;
+            }
+        });
     });
+
 </script>
 {% endblock %}
 {% block title %} 재고관리 페이지 {% endblock %}
@@ -243,22 +315,38 @@
     </div>
 </form>
 <hr/>
-<div class="row container-fluid">
-    <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
-    <button type="button" class="btn btn-primary col-1" onclick="location.href='/'">전체</button>
-    <button type="button" id="selectBtn" class="btn btn-primary col-1 pull-right">필터 예정</button>
-    <a href="/insert_plan" class="btn btn-warning col-1 offset-3"
-       onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
-    <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">상태 변경
-    </button>
-    <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록</button>
-</div>
+<form class="form-inline" action="/" method="POST">
+    <div class="row container-fluid">
+        <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
+        <button type="button" class="btn btn-primary col-1" onclick="location.href='/'">전체</button>
+        <select id="model_filter" class="btn btn-primary col-1" value="">
+            <option hidden>모델 필터</option>
+        </select>
+        <select id="location_filter" class="btn btn-primary col-1" value="">
+            <option hidden>위치 필터</option>
+            <option></option>
+            <option></option>
+        </select>
+        <select id="state_filter" class="btn btn-primary col-1" value="">
+            <option hidden>상태 필터</option>
+            <option></option>
+            <option></option>
+        </select>
+        <button type="submit" id="submit_filter" class="btn btn-warning col-1">필터 적용</button>
+        <a href="/insert_plan" class="btn btn-warning col-1 offset-2"
+           onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
+        <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">상태 변경
+        </button>
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록</button>
+    </div>
+</form>
 <hr/>
 {% if object.production_main_model()[0] %}
 <input hidden id="info_list" value="{{ object.production_main_info_list() }}"/>
 <input hidden id="model_list" value="{{ object.production_main_model() }}"/>
 <input hidden id="history_list" value="{{ object.production_main_history() }}"/>
 <input hidden id="specific_date_list" value="{{ date_rows }}"/>
+<input hidden id="main_table_list" value="{{ object.main_table_rows() }}"/>
 <table class="table table-striped table-bordered" id="main_table">
     <thead class="thead-dark">
     <tr>
@@ -311,7 +399,7 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-warning" onclick="location.href='/insert_data'">확 인
+                    <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인
                     </button>
                 </div>
             </div>
@@ -337,7 +425,7 @@
                                 <th>모델명</th>
                                 <th>시리얼 넘버</th>
                                 <th>위치</th>
-                                <th>상태</th>
+                                <th>사유</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -346,7 +434,7 @@
                         </table>
                         {% else %}
                         <h3> No Notice in the CheckBox</h3>
-                        <input type="hidden" name="data_empty" value='{{ true }}'/>
+                        <input type="hidden" id="state_submit_btn" name="data_empty" value='{{ true }}'/>
                         {% endif %}
                     </div>
                 </div>
@@ -387,6 +475,7 @@
                             <th>날짜</th>
                             <th>위치</th>
                             <th>상태</th>
+                            <th>비고(사유)</th>
                         </tr>
                         </thead>
                         <tbody>
